--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.10.0",
     "cheerio": "^1.1.0",
+    "clsx": "^2.1.1",
     "daisyui": "^5.0.46",
     "dayjs": "^1.11.13",
     "lucide-react": "^0.525.0",
